Removed extra paddings and fixed styling when the sidebar is hidden.

--- a/projects/ddap-common-lib/styles/partials/_layout.scss
+++ b/projects/ddap-common-lib/styles/partials/_layout.scss
@@ -65,7 +65,10 @@ $space: 16px;
 
     .sidenav-left {
       .secondary-toolbar {
-        text-align: center;
+
+        mat-icon {
+          margin-left: 4px;
+        }
 
         mat-icon:first-child + * {
           display: none;
